--- a/app/assets/stylesheets/posts/_posts.scss
+++ b/app/assets/stylesheets/posts/_posts.scss
@@ -1,5 +1,4 @@
 .wrapper-posts {
-  margin-top: 20px;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -43,8 +42,15 @@ div.wrapper-post:nth-child(odd) {
   width: 100px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
+    a{
+      margin-bottom: 2px;
+    }
+
+    img {
+      margin-bottom: 15px;
+    }
     i {
       margin-left: 5px;
       align-self: center;
@@ -88,10 +94,15 @@ div.wrapper-post:nth-child(odd) {
   display:flex;
   flex-direction:column;
   justify-content:center;
+  padding-bottom: 10px;
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 .title-post {
   font-size: 20px;
+  margin-bottom: 15px;
+  font-weight: 300;
 }
 
 .content-post {
@@ -111,13 +122,19 @@ div.wrapper-post:nth-child(odd) {
   justify-content: center;
   padding-bottom:10px;
   margin-bottom:15px;
-  margin-right:65px;
   margin-left:65px;
   border:none;
   border-width:1px;
   position:relative;
   border-radius:20px;
   border-color:#686868;
+  margin-right:10px;
+  form {
+    margin-top: 30px;
+    margin-left: 25px;
+    margin-right: 25px;
+    height: 40px;
+  }
 }
 
 .arrow-up {
@@ -132,14 +149,34 @@ div.wrapper-post:nth-child(odd) {
 }
 
 .box-comment {
-  padding: 15px;
+  padding: 12px;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #c3c3c3;
 }
 
 .avatar-comment {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 60px;
+}
+
+
+.list-comments {
+  padding-left: 0px;
+  font-size: 15px;
+  font-weight: 100;
+  margin-left:15px;
+  margin-right:15px;
+}
+
+#comment_batch_content {
+  height: 30px;
+}
+
+.small-padding {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
