--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   </head>
   <body>
         <%= javascript_include_tag 'application' %>
+        <%= javascript_pack_tag 'application' %>
 
     <% if current_page?(root_path) %>
     <style>
