--- a/app/views/shared/navbar/_navbar_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_black.html.erb
@@ -16,7 +16,9 @@
   box-shadow: none;
 }
 
-
+.container-navbar {
+  box-shadow: 0 5px 35px rgba(126, 87, 88, 0.03),0 5px 15px rgba(0,0,0,.07);
+}
 
 </style>
 
