--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     </style>
       <%= render 'shared/navbar/navbar' %>
       <%= yield %>
-      <%= javascript_pack_tag 'application' %>
+     <%#= javascript_pack_tag 'application' %>
       <%= render 'footer/footer' %>
     <% else %>
       <div class="page-wrapper">
@@ -42,7 +42,7 @@
         <div class="page-content">
           <%= yield %>
         </div>
-        <%= javascript_pack_tag 'application' %>
+        <%#= javascript_pack_tag 'application' %>
         <%= render 'footer/footer' %>
       </div>
     <% end %>
