--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -28,6 +28,19 @@
     color:black;
   }
 }
+
+.reviews-profile-title, .find-friends-title {
+  text-align: center;
+  border-bottom:2px solid black;
+  margin:10px;
+  padding:10px;
+  h2 {
+    font-weight:500;
+    font-size:30px;
+    color:black;
+  }
+}
+
 .marg-bot {
   margin-bottom: 50px;
 }
@@ -106,11 +119,24 @@
 }
 
 .profile-numbers {
-
+  display: flex;
+  flex-direction: row;
+  width:80%;
+  background-color: #F5F5F5;
+  justify-content:space-evenly;
+  border-radius:34px;
+  box-shadow:1px 1px 0.1px #f3eded;
+  padding:5px;
+  margin-bottom: 10px;
 }
 
 .user-numbers {
-
+  font-size:25px;
+  font-weight: 400;
+  p {
+    font-size: 17px;
+    font-weight: 200;
+  }
 }
 
 .numbers-ul {
