adjusted average rating position to the reviews section

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -3,14 +3,13 @@
 </div>
 
 <div class="under-title">
-  <p>Your beer was bottled on <strong><%= @batch.bottled_date.strftime("%B %d, %Y") %></strong> by <strong><%= @batch.brewery.name %>.</strong></p><br>
-  <p>Avg Rating: <%= raw "<i class='fas fa-star'></i>" * @batch.rating %></p>
+  <p>Your beer was bottled on <strong><%= @batch.bottled_date.strftime("%B %d, %Y") %></strong> by <strong><%= @batch.brewery.name %>.</strong></p>
 </div>
 
 
 <div class="batch-show-photo">
   <img class="beer-photo-on-batch" src='<%= cl_image_path(@beer.photo) %>'>
-</div><br>
+</div><br><br>
 
 <!-- <h2>Your beer's brewing process:</h2><br>
 <li><strong>Description: </strong><%= @batch.description %></li> -->
@@ -54,6 +53,8 @@
         <h2>Reviews</h2>
       </div>
       <div class="show-batch-review">
+        <p>Average: <%= raw "<i class='fas fa-star'></i>" * @batch.rating %></p>
+        <p>-----</p>
         <% @review_batches.each do |review| %>
         <p class="review-show"><b><%= raw "<i class='fas fa-star'></i>" * review.rating %></b> -- <%= review.user.first_name %>: <i style="font-weight: 300;"><%= review.content %></i></p>
         <% end %>
