--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -181,8 +181,7 @@
 .redirect-btns{
   align-content:center;
   align-self:center;
-  margin-bottom:20px;
-  margin-top: 20px !important;
+  margin: auto 20px;
   a.hover {
     color: black;
     opacity: 50%;
@@ -224,4 +223,9 @@
 
 .left-myself {
   text-align: left;
+}
+
+.adoptedlink {
+  width: 160px;
+  height: 50px;
 }
