--- a/app/assets/stylesheets/breweries.scss
+++ b/app/assets/stylesheets/breweries.scss
@@ -1,7 +1,7 @@
 .breweries-title {
   text-align: center;
   border-bottom:2px solid black;
-  margin:30px;
+  margin:10px 30px 30px 30px;
   padding:10px;
   h2 {
     font-weight:500;
