fixed photo in batch

--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -10,7 +10,7 @@
 
 <div class="batch-show-photo">
   <img class="beer-photo-on-batch" src='<%= cl_image_path(@beer.photo) %>'>
-</div><br><br>
+</div>
 
 <!-- <h2>Your beer's brewing process:</h2><br>
 <li><strong>Description: </strong><%= @batch.description %></li> -->
