--- a/app/assets/stylesheets/batches.scss
+++ b/app/assets/stylesheets/batches.scss
@@ -20,7 +20,6 @@
 }
 
 .batch-show-photo {
-  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +27,10 @@
 
 .beer-photo-on-batch {
   width: 75vw;
-  box-shadow: 1px 1px 2.4px gray;
+  height: 400px;
+  object-fit: contain;
+  filter: drop-shadow(0px 0px 1px rgba(0,0,0,.3))
+          drop-shadow(0px 0px 10px rgba(0,0,0,.3));
   border-radius: 2px;
 }
 
