fix brewery photo

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class='brewery-photo'>
-        <img src='<%= cl_image_path(@brewery.photo) %>' height='500'>
+        <img src='<%= cl_image_path(@brewery.photo) %>'>
     </div>
     <div class="brewery-description">
       <p><%= @brewery.description %></p>
