--- a/app/assets/stylesheets/batches.scss
+++ b/app/assets/stylesheets/batches.scss
@@ -39,10 +39,13 @@
   border-bottom: 2px solid black;
   padding: 10px;
   margin: 20px;
+  margin-left: -2px;
+  margin-right: -2px;
 }
 
-.batch-brewing-info {
-
+div.batch-info-titles:nth-child(5){
+  padding-right:20px;
+  margin-left:-20px;
 }
 
 .batch-info {
@@ -60,6 +63,8 @@
 
 .show-batch-review {
   text-align: center;
+  margin-left:10px;
+  margin-right:10px;
 }
 
 .links-at-bottom {
