--- a/app/assets/stylesheets/brewery.scss
+++ b/app/assets/stylesheets/brewery.scss
@@ -14,6 +14,7 @@
   text-align: center;
   margin-left: 15px;
   margin-right: 15px;
+  line-height:30px;
   p {
     font-size: 18px;
     font-weight: 100;
