--- a/app/views/shared/navbar/_navbar_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_white.html.erb
@@ -42,13 +42,27 @@
   <div class="dropdown">
     <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
     <div class="dropdown-menu dropdown-menu-right col-white" aria-labelledby="dropdownMenuButton">
-      <%= link_to "Home", root_path, class: "dropdown-item btn-navbar #{current_class?(root_path)}" %>
-      <%= link_to "Beers", beers_path, class: "dropdown-item btn-navbar #{current_class?(beers_path)}" %>
-      <%= link_to "Breweries", breweries_path, class: "dropdown-item btn-navbar #{current_class?(breweries_path)}" %>
-      <%= link_to "Wall", posts_path, class: "dropdown-item btn-navbar #{current_class?(posts_path)}" %>
-      <%= link_to "Activity", notifs_path, class: "dropdown-item btn-navbar #{current_class?(notifs_path)}" %>
-      <%= link_to "Profile", profile_path(current_user.id), class: "dropdown-item btn-navbar #{current_class?(profile_path(current_user.id))}" %>
-      <%= link_to "Log out", destroy_user_session_path, method: 'delete', class: "dropdown-item btn-navbar " %>
+      <%= link_to root_path, class: "dropdown-item btn-navbar #{current_class?(root_path)}" do %>
+      <i class="fas fa-home"> Home</i>
+    <% end %>
+    <%= link_to beers_path, class: "dropdown-item btn-navbar #{current_class?(beers_path)}" do %>
+        <i class="fas fa-beer"> Beer</i>
+      <% end %>
+    <%= link_to breweries_path, class: "dropdown-item btn-navbar #{current_class?(breweries_path)}" do %>
+        <i class="fas fa-industry"> Breweries</i>
+    <% end %>
+    <%= link_to posts_path, class: "dropdown-item btn-navbar #{current_class?(posts_path)}" do %>
+      <i class="fas fa-mail-bulk"> Wall</i>
+    <% end %>
+    <%= link_to notifs_path, class: "dropdown-item btn-navbar #{current_class?(notifs_path)}" do %>
+        <i class="fas fa-bell"> Activity</i>
+    <% end %>
+    <%= link_to profile_path(current_user.id), class: "dropdown-item btn-navbar #{current_class?(profile_path(current_user.id))}" do %>
+      <i class="fas fa-user"> Profile</i>
+    <% end %>
+    <%= link_to destroy_user_session_path, method: 'delete', class: "dropdown-item btn-navbar " do %>
+      <i class="fas fa-sign-out-alt"> Log out</i>
+    <% end %>
     </div>
   </div>
 
