brewery show page styling

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Here are all batches for <%= @beer.name %>:</h1>
+<h1>All batches for <%= @beer.name %>:</h1>
 
 <ul class="list-batch">
   <% @batches.each do |batch| %>
