--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class='brewery-photo'>
-        <img src='<%= cl_image_path(@brewery.photo) %>' height='500'>
+        <img src='<%= cl_image_path(@brewery.photo) %>'>
     </div>
     <div class="brewery-description">
       <p><%= @brewery.description %></p>
@@ -69,12 +69,12 @@
     </div>
     <div class="brewery-find-description">
       <%= @brewery.address %><br>
+      <% if current_user  %>
+          <%= @brewery.distance_from([current_user.lat, current_user.lng]).round(3) %> km
+        <% end %><br>
       <%= @brewery.phone_number %><br>
       <%= @brewery.email %><br>
       <%= link_to "Visit our Website", "#{@brewery.website}", target: "_blank" %>
-       <% if current_user  %>
-          <%= @brewery.distance_from([current_user.lat, current_user.lng]).round(3) %> km
-        <% end %>
       </div>
   </div>
 
