--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-        <%= javascript_include_tag 'application' %>
+        <%#= javascript_include_tag 'application' %>
         <%#= javascript_pack_tag 'application' %>
 
     <% if current_page?(root_path) %>
