--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -197,7 +197,6 @@
 .beer-title-show img {
   width: 100%;
   min-width: 200px;
-  border-radius: 30px;
 }
 .beer-map {
   margin: 25px;
@@ -226,7 +225,7 @@
 }
 
 .beer-title-header {
-
+    padding-bottom:10px;
     border-bottom: 2px solid black;
     margin: 30px 30px 40px 30px;
 
